# smoltlv

./: .gitignore  LICENSE  README.md
c/: Makefile  smoltlv.c  smoltlv.h  test.c
python/: README.md  pyproject.toml  test.py
python/smoltlv/: __init__.py
spec/: specification.typ  update.sh
